--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "autoprefixer": "^10.4.8",
     "next": "^12.2.2",
+    "postcss": "^8.4.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.1.7"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
