--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@radix-ui/react-dropdown-menu": "^1.0.0",
     "autoprefixer": "^10.4.8",
     "next": "^12.2.2",
     "postcss": "^8.4.14",
