--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@prisma/client": "^4.2.0",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "autoprefixer": "^10.4.8",
     "next": "^12.2.2",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "prisma": "^4.2.0",
     "typescript": "^4.7.4"
   }
 }
