--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
 		"start": "next start",
 		"lint": "next lint"
 	},
+	"prisma": {
+		"seed": "ts-node -O {\"module\":\"CommonJS\"} prisma/seed.ts"
+	},
 	"dependencies": {
 		"@auth0/nextjs-auth0": "^1.9.1",
 		"@prisma/client": "^4.2.1",
@@ -25,7 +28,8 @@
 		"@types/react-dom": "18.0.6",
 		"eslint": "8.19.0",
 		"eslint-config-next": "12.2.2",
-		"prisma": "^4.2.0",
+		"prisma": "^4.2.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4"
 	}
 }
