--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,13 +1,13 @@
 {
-	"singleQuote": true,
-	"printWidth": 110,
-	"editor.formatOnSave": true,
-	"proseWrap": "always",
-	"tabWidth": 2,
-	"requireConfig": false,
-	"useTabs": true,
-	"trailingComma": "none",
-	"bracketSpacing": true,
-	"semi": false,
-	"bracketSameLine": true
+  "singleQuote": true,
+  "printWidth": 110,
+  "editor.formatOnSave": true,
+  "proseWrap": "always",
+  "requireConfig": false,
+  "useTabs": true,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "semi": false,
+  "bracketSameLine": true,
+  "tabWidth": 2
 }
