--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,38 @@
 {
-	"name": "navalwars",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"prisma": {
-		"seed": "ts-node -O {\"module\":\"CommonJS\"} prisma/seed.ts"
-	},
-	"dependencies": {
-		"@auth0/nextjs-auth0": "^1.9.1",
-		"@prisma/client": "^4.2.1",
-		"@radix-ui/react-dropdown-menu": "^1.0.0",
-		"autoprefixer": "^10.4.8",
-		"next": "^12.2.2",
-		"postcss": "^8.4.16",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.1.8"
-	},
-	"devDependencies": {
-		"@types/node": "^18.0.6",
-		"@types/react": "^18.0.15",
-		"@types/react-dom": "18.0.6",
-		"eslint": "8.19.0",
-		"eslint-config-next": "12.2.2",
-		"prisma": "^4.2.1",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.7.4"
-	}
+  "name": "navalwars",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "ts-node -O {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "prettier": {
+    "tabWidth": 2
+  },
+  "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.1",
+    "@prisma/client": "^4.2.1",
+    "@radix-ui/react-dropdown-menu": "^1.0.0",
+    "autoprefixer": "^10.4.8",
+    "next": "^12.2.2",
+    "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "prisma": "^4.2.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  }
 }
