--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,12 @@
     "tabWidth": 2
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.9.1",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "autoprefixer": "^10.4.8",
     "next": "^12.2.2",
+    "next-auth": "^4.10.3",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
