--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -7,7 +7,7 @@
   "useTabs": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "semi": false,
+  "semi": true,
   "bracketSameLine": true,
   "tabWidth": 2
 }
