--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -6,6 +6,7 @@ AUTH0_CLIENT_SECRET='-0c7UfYqTKa8XtlLizvUohQIgiwuvydRFxKg43eBiPCTjX86YvL-QqpXnfv
 
 NEXTAUTH_URL=http://localhost:3000
 DATABASE_URL="mysql://root:admin@localhost:3306/testing"
+NEXRTAUTH_SECRET="kjshdakjsdhasdhueehfukhjfdks"
 
 GOOGLE_CLIENT_ID="1046056647270-9d2eja29i57vvbcqtuvtpe8otii5v0ig.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
