--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node -O {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.7",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
